--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "flightstats": "^0.19.2",
+    "live-server": "^1.2.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   }
